# ImLearningHaskell

./: .gitignore  CHANGELOG.md  ImLearningHaskell.cabal  LICENSE  README.md
app/: Main.hs
src/: Src.hs
tests/: TestMain.hs
